--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
@@ -16,7 +17,7 @@
     "express": "^4.18.2",
     "helmet": "^6.2.0",
     "history": "^5.3.0",
-    "http-proxy-middleware": "^0.20.0",
+    "http-proxy-middleware": "^2.0.6",
     "jss": "^10.9.2",
     "jss-preset-default": "^10.9.2",
     "less": "^3.13.1",
