--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "date-fns": "^3.1.0",
     "express": "^4.18.2",
     "helmet": "^6.2.0",
     "history": "^5.3.0",
@@ -26,6 +27,7 @@
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-jss": "^10.10.0",
     "react-redux": "^7.2.9",
