--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express": "^4.18.2",
     "helmet": "^6.2.0",
     "history": "^5.3.0",
+    "html2canvas": "^1.4.1",
     "http-proxy-middleware": "^2.0.6",
+    "jspdf": "^2.5.1",
     "jss": "^10.9.2",
     "jss-preset-default": "^10.9.2",
     "less": "^3.13.1",
